# varframe

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  TODO.md  __init__.py  dependencies.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  variables.py
.github/workflows/: ci.yml  publish.yml
api_reference/: index.html
docs/: api_reference.md  index.md  user_guide.md
examples/: README.md  __init__.py  ensemble_demo.py  export_demo.py  lazy_demo.py  ltv_demo.py
search/: search_index.json
tests/: test_core.py  test_loading.py
user_guide/: index.html
varframe/: __init__.py  config.py  dataframe.py  dependencies.py  exceptions.py  models.py  types.py  variables.py
