[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varframe"
version = "1.2.1"
description = "Declarative DataFrame variable management with automatic DAG dependency resolution and ML model integration"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Santiago Romagosa", email = "romagosasantiago@gmail.com"}
]
keywords = [
    "pandas",
    "dataframe",
    "variables",
    "dag",
    "machine-learning",
    "feature-engineering",
    "data-pipeline",
    "workflow",
    "data-science",
    "etl"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Core dependencies (required)
dependencies = [
    "pandas>=1.3.0",
]

[project.optional-dependencies]
# ML features: evaluate(), save(), load()
ml = [
    "scikit-learn>=1.0.0",
    "joblib>=1.0.0",
]
# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
# All optional dependencies
all = [
    "varframe[ml,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/Santi-49/varframe"
Repository = "https://github.com/Santi-49/varframe"
# Documentation = "https://varframe.readthedocs.io"
# Changelog = "https://github.com/romagosa/varframe/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["varframe*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=varframe --cov-report=term-missing"
